Bug 85011 - pa_context_connect: flags documentation is misleading
Summary: pa_context_connect: flags documentation is misleading
Status: RESOLVED FIXED
Alias: None
Product: PulseAudio
Classification: Unclassified
Component: core (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: pulseaudio-bugs
QA Contact: pulseaudio-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-10-14 16:51 UTC by Stefan Brüns
Modified: 2015-02-25 07:25 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
make pa_context_connect() return 0 when waiting for D-Bus (1.30 KB, patch)
2014-11-15 14:38 UTC, Peter Meerwald
Details | Splinter Review

Description Stefan Brüns 2014-10-14 16:51:32 UTC
enum pa_context_flags states:

PA_CONTEXT_NOFAIL: Don't fail if the daemon is not available when pa_context_connect() is called, instead enter PA_CONTEXT_CONNECTING state and wait for the daemon to appear.

in case noautospawn is set (either via flags or using pa client.conf) and no server has been specified, pa start listening on DBUS for a new server, and the state is PA_CONTEXT_CONNECTING, but pa_context_connect returns -1.
Comment 1 Peter Meerwald 2014-11-15 14:38:07 UTC
Created attachment 109522 [details] [review]
make pa_context_connect() return 0 when waiting for D-Bus
Comment 2 Tanu Kaskinen 2015-02-25 07:25:01 UTC
The patch has been merged.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.